<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile_user"

        app:actionLayout="@layout/arraow"
        />

    <item
        android:id="@+id/about_us"
        android:title="@string/about_us"
        android:icon="@drawable/ic_like"
        app:actionLayout="@layout/arraow"

        />

    <item
        android:id="@+id/contact_us"
        android:title="@string/contact_us"
        android:icon="@drawable/ic_mail"
        app:actionLayout="@layout/arraow"

        />

    <item
        android:id="@+id/language"
        android:title="@string/language"
        android:icon="@drawable/language"
        app:actionLayout="@layout/arraow"

        />

    <item
        android:id="@+id/my_orders"
        android:title="@string/my_orders"
        android:icon="@drawable/ic_shopping_bag"
        app:actionLayout="@layout/arraow"

        />



    <item
        android:id="@+id/saved_address"
        android:title="@string/saved_address"
        android:icon="@drawable/location1"
        app:actionLayout="@layout/arraow"


        />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"

        app:actionLayout="@layout/arraow"

        />
    </group>
</menu>



