<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment"
    android:layoutDirection="rtl">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/drawer_btn"
            android:layout_width="34dp"
            android:layout_height="30dp"
            android:layout_gravity="start|center"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/menu"
            android:elevation="7dp"
            android:src="@drawable/menu10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="7dp"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/header"
            android:src="@drawable/header" />

        <ImageView
            android:id="@+id/cart_icon"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/cart"
            android:elevation="7dp"
            android:src="@drawable/ic_shopping_cart" />

        <ImageView
            android:id="@+id/notifyBell"
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/cart"
            android:elevation="7dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            android:src="@drawable/bill" />

    </FrameLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_to_refresh_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/search_products_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:clickable="true"
                android:contentDescription="@string/search"
                android:elevation="5dp"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_search_interface" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/products_cat_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <ProgressBar
                android:id="@+id/progress_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/message_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/empty"
                android:textAlignment="center"
                android:textColor="@color/red_500"
                android:textSize="19sp"
                android:visibility="gone" />

        </FrameLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>