<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/product_image" />

    <TextView
        android:id="@+id/quantity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:layout_toEndOf="@id/product_image"
        android:text="@string/quantity"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/total_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quantity_label"
        android:layout_margin="10dp"
        android:layout_toEndOf="@id/product_image"
        android:text="@string/total_price"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:layout_toEndOf="@id/quantity_label"
        android:text="101"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quantity"
        android:layout_margin="10dp"
        android:layout_toEndOf="@id/total_price_label"
        android:text="110"
        android:textColor="@color/black"
        android:textSize="16sp" />

</RelativeLayout>